fixed spacing mobile queries

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -199,8 +199,8 @@
     margin-bottom: 6.8rem;
   }
 
-  .header-text {
-    white-space: nowrap;
+  .intro-textbox {
+    margin-bottom: 9.6rem;
   }
 
   .intro-img {
@@ -209,6 +209,18 @@
 
   .testimonials-container {
     row-gap: 0;
+  }
+
+  .section-testimonials {
+    padding: 9.6rem 2rem;
+  }
+
+  .featured-card {
+    margin-bottom: 6.2rem;
+  }
+
+  .featured-card:last-child {
+    margin-bottom: 0;
   }
 
   .booking-text {
